# napari-features-selection

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_features_selection/: __init__.py  _ga_feature_selection.py  _widget.py  napari.yaml
src/napari_features_selection/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
