[metadata]
name = napari-features-selection
version = 0.0.1
description = Plugin to select the important set of features for further analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kumar-sanjeeev/napari-features-selection
author = Sanjeev Kumar
author_email = kumar.san96@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/kumar-sanjeeev/napari-features-selection/issues
    Documentation = https://github.com/kumar-sanjeeev/napari-features-selection#README.md
    Source Code = https://github.com/kumar-sanjeeev/napari-features-selection
    User Support = https://github.com/kumar-sanjeeev/napari-features-selection/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-features-selection = napari_features_selection:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
